--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -1,14 +1,41 @@
-body, html {
-    background-color: gray;
+#document {
+    background-color: black;
     height: 100%;
+}
+
+#heading {
+    font-size: 30px;
+}
+
+#header {
+    position: relative;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 15px;
+    color: lightgray;
+}
+
+#controls {
+    float: right;
+    margin-right: 5%;
+}
+
+#parent-videos {
+    position: relative;
+    width: 100%;
+    height: 90%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #videos {
     position: relative;
-    width: 100%;
+    width: 70%;
     height: 100%;
     margin-left: auto;
     margin-right: auto;
+    float: left;
 }
 
 #subscriber {
@@ -29,4 +56,18 @@ body, html {
     z-index: 100;
     border: 3px solid white;
     border-radius: 3px;
+}
+
+#info-bar {
+    position: relative;
+    width: 30%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    float: right;
+    background-color: whitesmoke;
+}
+
+.panel-body {
+  word-wrap: break-word;
 }
