--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,15 +8,36 @@
 </head>
 <body>
 
-    <div id="controls">
-        <button id="start-recording" type="button" class="btn btn-primary">Start Recording</button>
-        <button id="stop-recording" type="button" class="btn btn-primary">Stop Recording</button>
-        <button id="details-recording" type="button" class="btn btn-primary">Get Recording details</button>
-        <button id="play-recording" type="button" class="btn btn-primary">Play Recording</button>
-    </div>
-    <div id="videos">
-        <div id="subscriber"></div>
-        <div id="publisher"></div>
+    <div id="document">
+        <div id="header">
+            <span id="heading">VHL Chat Tool | WebRTC Demo</span>
+            <span id="controls">
+               <select id="chat_rooms" style="color: black;">
+                   <option value="room_1">Room 1</option>
+                   <option value="room_2">Room 2</option>
+                   <option value="room_3">Room 3</option>
+                   <option value="room_4">Room 4</option>
+                   <option value="room_5">Room 5</option>
+              </select>
+                <button id="connect" type="button" class="btn btn-primary">Connect</button>
+                <button id="disconnect" type="button" class="btn btn-primary" style="display:none;">Disconnect</button>
+
+                <button id="start-recording" type="button" class="btn btn-primary" disabled="true">Start Recording</button>
+                <button id="stop-recording" type="button" class="btn btn-primary" style="display:none;">Stop Recording</button>
+                <button id="play-recording" type="button" class="btn btn-primary" style="display:none;">Play Recording</button>
+            </span>
+        </div>
+        <div id="parent-videos">
+            <div id="videos">
+                <div id="subscriber"></div>
+                <div id="publisher"></div>
+            </div>
+            <div id="info-bar">
+                <div class="panel panel-default" style="margin: 2%;">
+                    <div class="panel-body" id="debug-body" style="height: 600px;">Debug Info</div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
