--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,6 +18,7 @@
                      <option value="room_3">Room 3</option>
                      <option value="room_4">Room 4</option>
                      <option value="room_5">Room 5</option>
+                     <option value="room_6">Safari Room 6</option>
                 </select>
                 <button id="connect" type="button" class="btn btn-info btn-lg">Connect</button>
                 <button id="disconnect" type="button" class="btn btn-info btn-lg" style="display:none;">Disconnect</button>
