--- a/app/views/index.html
+++ b/app/views/index.html
@@ -33,6 +33,10 @@
                 <div id="publisher"></div>
             </div>
             <div id="info-bar">
+                <div class="checkbox">
+                    <label class="input-box"><input type="checkbox" id="audio-only" value="">Audio Only</label>
+                    <label class="input-box"><input type="checkbox" id="img-bg" value="">Image Background</label>
+                </div>
                 <div class="panel panel-default" style="margin: 2%;">
                     <div class="panel-body" id="debug-body" style="height: 600px;">Debug Info</div>
                 </div>
