Room Name Updated.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,8 +19,8 @@
                      <option value="regular_room_1">Room 1</option>
                      <option value="regular_room_2">Room 2</option>
                      <option value="regular_room_3">Room 3</option>
-                     <option value="safari_room_1">VHL Safari Room 1</option>
-                     <option value="safari_room_2">VHL Safari Room 2</option>
+                     <option value="safari_room_1">Safari Room 1</option>
+                     <option value="safari_room_2">Safari Room 2</option>
                 </select>
                 <select id="audio-only">
                     <option value="false">Share my video & audio</option>
