Name Included in the Live Video Call.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,6 +26,7 @@
                     <option value="false">Share my video & audio</option>
                     <option value="true">Don't share video (audio only)</option>
                 </select>
+                <input type="text" id="name" placeholder="Enter Your Name">
                 <button id="connect" type="button" class="btn btn-info btn-lg">Connect</button>
                 <button id="disconnect" type="button" class="btn btn-info btn-lg" style="display:none;">Disconnect</button>
 
