Layout testing for composed video.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,7 +20,12 @@
                      <option value="regular_room_2">Room 2</option>
                      <option value="regular_room_3">Room 3</option>
                      <option value="safari_room_1">Safari Room 1</option>
-                     <option value="safari_room_2">Safari Room 2</option>
+                     <option value="safari_room_2">Safari Room 2.1</option>
+                     <option value="safari_room_3">Safari Room 2.2</option>
+                </select>
+                <select id="layout-class">
+                     <option value="focus">Focus</option>
+                     <option value="">Normal</option>
                 </select>
                 <select id="audio-only">
                     <option value="false">Share my video & audio</option>
